--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   push:
     # On dev branch release-dev already performs CI checks
     # On other branches the `pull_request` trigger will be used
-    branches: [beta, master]
+    branches: [beta, master, staging]
 
   pull_request:
 
